--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/RedRkn/discord-bot-mc.git"
+    "url": "git+https://github.com/RedRkn/Ikari-BotMC.git"
   },
   "keywords": [
     "minecraft",
@@ -20,9 +20,9 @@
   ],
   "author": "AlexClient",
   "bugs": {
-    "url": "https://github.com/RedRkn/discord-bot-mc/issues"
+    "url": "https://github.com/RedRkn/Ikari-BotMC/issues"
   },
-  "homepage": "https://github.com/RedRkn/discord-bot-mc#readme",
+  "homepage": "https://github.com/RedRkn/Ikari-BotMC#readme",
   "dependencies": {
     "discord.js": "^12.2.0",
     "ms": "^2.1.3",
