--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "minecraft-discord-bot",
+  "name": "Ikari-BotMC",
   "version": "0.1.0",
   "description": "View the status and statistics of your MC server directly on Discord!",
   "main": "index.js",
